# PoliProjects

AIA-React/React - main task/: README.md
AIA-React/node-js-task/: ddl.sql
AIA-React/text-game-ngine/: README.md  package-lock.json  package.json
AIA-Solutions/1. Responsive Website/: index.html
AIA-Solutions/2. Javascript/: app.js  index.html  style.css  style.min.css  style.scss
AIA-Solutions/3. jQuery/: AJAXEvents.html  Events.html  JSONHandler.html  JSONHandler.js  Selectors.html  Style.html  XMLHttpRequest.html  XMLHttpRequest.js  style.css
DiceDetector/: .gitignore  main.py
EyeVeinDetector/: Eye Vein Detector.ipynb  utilities.py
FHIR-Client-App/: package-lock.json  package.json
FHIR-Client-App/public/: index.html
FHIR-Client-App/src/: App.js  config.js  index.css  utils.js
FrontendClasses/project1/: _about.scss  _achievements.scss  _collaborators.scss  _colors.scss  _contact.scss  _custom-scrollbar.scss  _discoveries.scss  _gallery.scss  _img.scss  _logo.scss  _nav.scss  _organizers.scss  index.html  main.scss
GraphicsOpenGL/: OpenGL Project.sln
GraphicsOpenGL/OpenGL Project — particle/: Model.cpp  Model.h  Particle.h  (+13 more)
OK-Project/: OK-Project.sln
PR/: Zad1.sln
PW-Project/: Projekt.c  dataDisplay.c  poligon.c  skrypc.sh  struct.h
SK-Project/: .gitignore
SK-Project/Serwer/: .gitignore  CMakeLists.txt  README.md  config.txt
SK-Project/Serwer/Classes/: Client.cpp  Client.h  Game.cpp  Game.h  Server.cpp  Server.h  SocketHandler.cpp  SocketHandler.h
SK-Project/Serwer/Utils/: utils.cpp  utils.h
TextTransformerIO/: README.md  pom.xml
(+153 files in other folders)
